--- a/DiscordAstroBot/DiscordAstroBot/App.config
+++ b/DiscordAstroBot/DiscordAstroBot/App.config
@@ -36,8 +36,9 @@
   </log4net>
 
   <appSettings>
+    <add key="AstrometryTokenFilePath" value="T:\Tino\AstrometryToken.txt" />
     <add key="TokenFilePath" value="T:\Tino\AstroDiscordBotToken.txt" />
-    <add key="ChatPrefix" value="!"/>
+    <add key="ChatPrefix" value="astrobot"/>
   </appSettings>
 
 </configuration>
