Continued work on Astrometry command

--- a/DiscordAstroBot/DiscordAstroBot/App.config
+++ b/DiscordAstroBot/DiscordAstroBot/App.config
@@ -36,8 +36,8 @@
   </log4net>
 
   <appSettings>
-    <add key="AstrometryTokenFilePath" value="T:\Tino\AstrometryToken.txt" />
-    <add key="TokenFilePath" value="T:\Tino\AstroDiscordBotToken.txt" />
+    <add key="AstrometryTokenFilePath" value="\\10.0.0.2\Documents\Tino\AstrometryToken.txt" />
+    <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken.txt" />
     <add key="ChatPrefix" value="astrobot"/>
   </appSettings>
 
