Started reworking the whole simbad query command

--- a/DiscordAstroBot/DiscordAstroBot/App.config
+++ b/DiscordAstroBot/DiscordAstroBot/App.config
@@ -3,6 +3,12 @@
 
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
 
   <startup>
@@ -41,4 +47,25 @@
     <add key="ChatPrefix" value="astrobot"/>
   </appSettings>
 
+  <applicationSettings>
+    <DiscordAstroBot.Simbad.SIMBADSettings>
+      <setting name="ObjectQuery" serializeAs="String">
+        <value>output console=off script=off
+format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
+"[[ObjectType]]\n%OTYPE(V)\n" +
+"[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
+"[[Identifiers]]\n%IDLIST[%-20*\n]"+
+""
+query id {0}
+</value>
+      </setting>
+    </DiscordAstroBot.Simbad.SIMBADSettings>
+  </applicationSettings>
+  <userSettings>
+    <DiscordAstroBot.Simbad.SIMBADSettings>
+      <setting name="IdentifierNotFoundMessage" serializeAs="String">
+        <value>Identifier not found in the database</value>
+      </setting>
+    </DiscordAstroBot.Simbad.SIMBADSettings>
+  </userSettings>
 </configuration>
