--- a/DiscordAstroBot/DiscordAstroBot/App.config
+++ b/DiscordAstroBot/DiscordAstroBot/App.config
@@ -54,10 +54,10 @@
 format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
 "[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
-"[[Identifiers]]\n%IDLIST[%-20*\n]"+
-""
-query id {0}
-</value>
+"[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
+"[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
+"[[end]]"
+query id {0}</value>
       </setting>
     </DiscordAstroBot.Simbad.SIMBADSettings>
   </applicationSettings>
