--- a/DiscordAstroBot/DiscordAstroBot/Simbad/SIMBADSettings.settings
+++ b/DiscordAstroBot/DiscordAstroBot/Simbad/SIMBADSettings.settings
@@ -7,10 +7,10 @@
 format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
 "[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
-"[[Identifiers]]\n%IDLIST[%-20*\n]"+
-""
-query id {0}
-</Value>
+"[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
+"[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
+"[[end]]"
+query id {0}</Value>
     </Setting>
     <Setting Name="IdentifierNotFoundMessage" Type="System.String" Scope="User">
       <Value Profile="(Default)">Identifier not found in the database</Value>
