--- a/DiscordAstroBot/DiscordAstroBot/App.config
+++ b/DiscordAstroBot/DiscordAstroBot/App.config
@@ -59,8 +59,10 @@ format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
 "[[Parallax]]\nValue: %PLX(V)\nError: %PLX(E)\n" +
 "[[RadialVelocity]]\nz: %RV(Z)\nError: %RV(E)\nv: %RV(V)\n" +
+"[[Distances]]\n%MEASLIST(distance)\n" +
 "[[end]]"
-query id {0}</value>
+query id {0}
+</value>
       </setting>
     </DiscordAstroBot.Simbad.SIMBADSettings>
   </applicationSettings>
