--- a/DiscordAstroBot/DiscordAstroBot/Simbad/SIMBADSettings.settings
+++ b/DiscordAstroBot/DiscordAstroBot/Simbad/SIMBADSettings.settings
@@ -12,8 +12,10 @@ format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
 "[[Parallax]]\nValue: %PLX(V)\nError: %PLX(E)\n" +
 "[[RadialVelocity]]\nz: %RV(Z)\nError: %RV(E)\nv: %RV(V)\n" +
+"[[Distances]]\n%MEASLIST(distance)\n" +
 "[[end]]"
-query id {0}</Value>
+query id {0}
+</Value>
     </Setting>
     <Setting Name="IdentifierNotFoundMessage" Type="System.String" Scope="User">
       <Value Profile="(Default)">Identifier not found in the database</Value>
