--- a/DiscordAstroBot/DiscordAstroBot/App.config
+++ b/DiscordAstroBot/DiscordAstroBot/App.config
@@ -51,6 +51,7 @@
     <DiscordAstroBot.Simbad.SIMBADSettings>
       <setting name="ObjectQuery" serializeAs="String">
         <value>output console=off script=off
+set row limit 1
 format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
 "[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
@@ -62,8 +63,7 @@ format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[Distances]]\n%MEASLIST(distance)\n" +
 "[[Fluxes]]\n%FLUXLIST()[%*(N=F)\n]\n" +
 "[[end]]"
-query id {0}
-</value>
+query id {0}</value>
       </setting>
     </DiscordAstroBot.Simbad.SIMBADSettings>
   </applicationSettings>
