--- a/DiscordAstroBot/DiscordAstroBot/Simbad/SIMBADSettings.settings
+++ b/DiscordAstroBot/DiscordAstroBot/Simbad/SIMBADSettings.settings
@@ -4,6 +4,7 @@
   <Settings>
     <Setting Name="ObjectQuery" Type="System.String" Scope="Application">
       <Value Profile="(Default)">output console=off script=off
+set row limit 1
 format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
 "[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
@@ -15,8 +16,7 @@ format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[Distances]]\n%MEASLIST(distance)\n" +
 "[[Fluxes]]\n%FLUXLIST()[%*(N=F)\n]\n" +
 "[[end]]"
-query id {0}
-</Value>
+query id {0}</Value>
     </Setting>
     <Setting Name="IdentifierNotFoundMessage" Type="System.String" Scope="User">
       <Value Profile="(Default)">Identifier not found in the database</Value>
