--- a/DiscordAstroBot/DiscordAstroBot/DiscordAstroBot.csproj
+++ b/DiscordAstroBot/DiscordAstroBot/DiscordAstroBot.csproj
@@ -93,7 +93,6 @@
   <ItemGroup>
     <Compile Include="Command.cs" />
     <Compile Include="Commands\AstroMetry.cs" />
-    <Compile Include="Commands\Sesame.cs" />
     <Compile Include="Commands\GeoLocation.cs" />
     <Compile Include="Commands\Launches.cs" />
     <Compile Include="Commands\Simbad.cs" />
@@ -109,6 +108,11 @@
     <Compile Include="Helpers\WeatherHelper.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Objects\AstronomicalObjectInfo.cs" />
+    <Compile Include="Objects\LaunchLocation.cs" />
+    <Compile Include="Objects\Rocket.cs" />
+    <Compile Include="Objects\SpaceAgency.cs" />
+    <Compile Include="Objects\SpaceLaunch.cs" />
+    <Compile Include="Objects\SpaceMission.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reactions\Reactions.cs" />
