--- a/DiscordAstroBot/DiscordAstroBot/DiscordAstroBot.csproj
+++ b/DiscordAstroBot/DiscordAstroBot/DiscordAstroBot.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Commands\AstroMetry.cs" />
     <Compile Include="Commands\GeoLocation.cs" />
     <Compile Include="Commands\Launches.cs" />
+    <Compile Include="Commands\AdminCommands.cs" />
     <Compile Include="Commands\Simbad.cs" />
     <Compile Include="Commands\SmallTalkCommand.cs" />
     <Compile Include="Commands\TestCommand.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Objects\AstronomicalObjectInfo.cs" />
     <Compile Include="Objects\LaunchLocation.cs" />
     <Compile Include="Objects\LaunchPad.cs" />
+    <Compile Include="Objects\MadUsers.cs" />
     <Compile Include="Objects\Rocket.cs" />
     <Compile Include="Objects\SpaceAgency.cs" />
     <Compile Include="Objects\SpaceLaunch.cs" />
@@ -124,7 +126,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>SIMBADSettings.settings</DependentUpon>
     </Compile>
-    <Compile Include="StateController\State.cs" />
+    <Compile Include="XmlSerialization\XmlStateController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -139,10 +141,14 @@
       <Link>phantomjs.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="configs\MadUsers.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="phantomjs-license.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.2.25.0.8\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.2.25.0.8\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
