--- a/DiscordAstroBot/DiscordAstroBot/DiscordAstroBot.csproj
+++ b/DiscordAstroBot/DiscordAstroBot/DiscordAstroBot.csproj
@@ -129,6 +129,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>SIMBADSettings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\CommandsUtil.cs" />
     <Compile Include="Utilities\DiscordUtilities.cs" />
     <Compile Include="XmlSerialization\XmlStateController.cs" />
   </ItemGroup>
@@ -145,7 +146,9 @@
       <Link>phantomjs.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="config\Commands.xml" />
+    <Content Include="config\Commands.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="config\MadUsers.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
