--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -43,7 +43,7 @@
 
   <appSettings>
     <add key="AstrometryTokenFilePath" value="\\10.0.0.2\Documents\Tino\AstrometryToken.txt" />
-    <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken.txt" />
+    <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken_dev.txt" />
     <add key="ChatPrefix" value="astrobot" />
   </appSettings>
 
