--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -1,50 +1,50 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
 
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
   </startup>
 
   <log4net>
     <appender name="Console" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
         <!-- Pattern to output the caller's file name and line number -->
-        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />
+        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline"/>
       </layout>
     </appender>
 
     <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-      <file value="LogFile" />
-      <appendToFile value="true" />
-      <maximumFileSize value="10MB" />
-      <maxSizeRollBackups value="100" />
+      <file value="LogFile"/>
+      <appendToFile value="true"/>
+      <maximumFileSize value="10MB"/>
+      <maxSizeRollBackups value="100"/>
 
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%level %thread %logger - %message%newline" />
+        <conversionPattern value="%level %thread %logger - %message%newline"/>
       </layout>
     </appender>
 
     <root>
-      <level value="INFO" />
-      <appender-ref ref="Console" />
-      <appender-ref ref="RollingFile" />
+      <level value="INFO"/>
+      <appender-ref ref="Console"/>
+      <appender-ref ref="RollingFile"/>
     </root>
   </log4net>
 
   <appSettings>
-    <add key="AstrometryTokenFilePath" value="\\10.0.0.2\Documents\Tino\AstrometryToken.txt" />
-    <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken_dev.txt" />
-    <add key="ChatPrefix" value="astrobot" />
+    <add key="AstrometryTokenFilePath" value="\\10.0.0.2\Documents\Tino\AstrometryToken.txt"/>
+    <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken_dev.txt"/>
+    <add key="ChatPrefix" value="astrobot"/>
   </appSettings>
 
   <applicationSettings>
@@ -77,12 +77,12 @@ query id {0}</value>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Interactive.Async" publicKeyToken="94bc3704cddfc263" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1000.0" newVersion="3.0.1000.0" />
+        <assemblyIdentity name="System.Interactive.Async" publicKeyToken="94bc3704cddfc263" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1000.0" newVersion="3.0.1000.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
