--- a/Astrobot/packages.config
+++ b/Astrobot/packages.config
@@ -18,7 +18,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net452" />
   <package id="PhantomJS" version="2.1.1" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
   <package id="Selenium.Support" version="3.4.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.30.0.1" targetFramework="net452" />
@@ -30,12 +30,12 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
-  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net452" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net452" requireReinstallation="true" />
   <package id="System.IO" version="4.3.0" targetFramework="net452" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Linq" version="4.3.0" targetFramework="net452" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
@@ -53,7 +53,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
 </packages>
