--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -45,6 +45,8 @@
     <add key="AstrometryTokenFilePath" value="\\10.0.0.2\Documents\Tino\AstrometryToken.txt"/>
     <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken_dev.txt"/>
     <add key="ChatPrefix" value="astrobot"/>
+    <add key="WhiteListEnabled" value="true"/>
+    <add key="OwnerName" value="Cobra#1234" />
   </appSettings>
 
   <applicationSettings>
