--- a/Astrobot/DiscordAstroBot.csproj
+++ b/Astrobot/DiscordAstroBot.csproj
@@ -151,9 +151,11 @@
     <Compile Include="Mappers\Config\MadUsers.cs" />
     <Compile Include="Mappers\Config\ServerCommands.cs" />
     <Compile Include="Mappers\Config\ServerConfig.cs" />
+    <Compile Include="Mappers\Config\WhiteList.cs" />
     <Compile Include="Mappers\LaunchLibrary\LaunchLibraryAPIHelper.cs" />
     <Compile Include="Helpers\WeatherHelper.cs" />
     <Compile Include="Log.cs" />
+    <Compile Include="Objects\Config\WhiteList.cs" />
     <Compile Include="Objects\Simbad\AstronomicalObjectInfo.cs" />
     <Compile Include="Objects\Config\CommandsConfig.cs" />
     <Compile Include="Objects\Config\ServerSettings.cs" />
@@ -202,6 +204,9 @@
     </Content>
     <Content Include="config\ServerSettings.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="config\ServerWhiteList.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="phantomjs-license.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
