New feature to query a certain area in the sky for known objects

--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -4,9 +4,11 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="DiscordAstroBot.Mappers.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="DiscordAstroBot.Mappers.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="DiscordAstroBot.Simbad.SIMBADSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
@@ -50,6 +52,24 @@
   </appSettings>
 
   <applicationSettings>
+    <DiscordAstroBot.Mappers.Simbad.SIMBADSettings>
+      <setting name="ObjectQuery" serializeAs="String">
+        <value>output console=off script=off
+set row limit 1
+format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
+"[[ObjectType]]\n%OTYPE(V)\n" +
+"[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
+"[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
+"[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
+"[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
+"[[Parallax]]\nValue: %PLX(V)\nError: %PLX(E)\n" +
+"[[RadialVelocity]]\nz: %RV(Z)\nError: %RV(E)\nv: %RV(V)\n" +
+"[[Distances]]\n%MEASLIST(distance)\n" +
+"[[Fluxes]]\n%FLUXLIST()[%*(N=F)\n]\n" +
+"[[end]]"
+query id {0}</value>
+      </setting>
+    </DiscordAstroBot.Mappers.Simbad.SIMBADSettings>
     <DiscordAstroBot.Simbad.SIMBADSettings>
       <setting name="ObjectQuery" serializeAs="String">
         <value>output console=off script=off
@@ -70,6 +90,27 @@ query id {0}</value>
     </DiscordAstroBot.Simbad.SIMBADSettings>
   </applicationSettings>
   <userSettings>
+    <DiscordAstroBot.Mappers.Simbad.SIMBADSettings>
+      <setting name="IdentifierNotFoundMessage" serializeAs="String">
+        <value>Identifier not found in the database</value>
+      </setting>
+      <setting name="RegionQuery" serializeAs="String">
+        <value>format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
+"[[ObjectType]]\n%OTYPE(V)\n" +
+"[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
+"[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
+"[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
+"[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
+"[[Parallax]]\nValue: %PLX(V)\nError: %PLX(E)\n" +
+"[[RadialVelocity]]\nz: %RV(Z)\nError: %RV(E)\nv: %RV(V)\n" +
+"[[Distances]]\n%MEASLIST(distance)\n" +
+"[[Fluxes]]\n%FLUXLIST()[%*(N=F)\n]\n" +
+"[[end]]"
+
+set radius val({0}d)
+query around {1}</value>
+      </setting>
+    </DiscordAstroBot.Mappers.Simbad.SIMBADSettings>
     <DiscordAstroBot.Simbad.SIMBADSettings>
       <setting name="IdentifierNotFoundMessage" serializeAs="String">
         <value>Identifier not found in the database</value>
