--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -107,8 +107,8 @@ query id {0}</value>
 "[[Fluxes]]\n%FLUXLIST()[%*(N=F)\n]\n" +
 "[[end]]"
 
-set radius val({0}d)
-query around {1}</value>
+set radius {0}d
+query coo {1}</value>
       </setting>
     </DiscordAstroBot.Mappers.Simbad.SIMBADSettings>
     <DiscordAstroBot.Simbad.SIMBADSettings>
