--- a/Astrobot/DiscordAstroBot.csproj
+++ b/Astrobot/DiscordAstroBot.csproj
@@ -176,6 +176,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>SIMBADSettings.settings</DependentUpon>
     </Compile>
+    <Compile Include="TimerJobs\News.cs" />
+    <Compile Include="TimerJobs\TimerJobBase.cs" />
     <Compile Include="Utilities\CommandsUtility.cs" />
     <Compile Include="Utilities\DiscordUtility.cs" />
     <Compile Include="Utilities\ImageUtility.cs" />
