--- a/Astrobot/DiscordAstroBot.csproj
+++ b/Astrobot/DiscordAstroBot.csproj
@@ -176,7 +176,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>SIMBADSettings.settings</DependentUpon>
     </Compile>
-    <Compile Include="TimerJobs\News.cs" />
+    <Compile Include="TimerJobs\LaunchNews.cs" />
     <Compile Include="TimerJobs\TimerJobBase.cs" />
     <Compile Include="Utilities\CommandsUtility.cs" />
     <Compile Include="Utilities\DiscordUtility.cs" />
@@ -205,7 +205,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="config\ServerSettings.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="config\ServerWhiteList.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
