--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -58,7 +58,7 @@
 set row limit 1
 format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
-"[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
+"[[Coordinates]]\nRA: %COO(d;A)\nDEC: %COO(d;D)\n" +
 "[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
 "[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
 "[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
@@ -97,7 +97,7 @@ query id {0}</value>
       <setting name="RegionQuery" serializeAs="String">
         <value>format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
-"[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
+"[[Coordinates]]\nRA: %COO(d;A)\nDEC: %COO(d;D)\n" +
 "[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
 "[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
 "[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
@@ -107,8 +107,7 @@ query id {0}</value>
 "[[Fluxes]]\n%FLUXLIST()[%*(N=F)\n]\n" +
 "[[end]]"
 
-set radius {0}d
-query coo {1}</value>
+query sample ra &gt; {RALowerLimit} &amp; ra &lt; {RAUpperLimit} &amp; dec &lt; {DECUpperLimit} &amp; dec &gt; {DECLowerLimit} &amp; maintype != 'star'</value>
       </setting>
     </DiscordAstroBot.Mappers.Simbad.SIMBADSettings>
     <DiscordAstroBot.Simbad.SIMBADSettings>
