--- a/Astrobot/Mappers/Simbad/SIMBADSettings.settings
+++ b/Astrobot/Mappers/Simbad/SIMBADSettings.settings
@@ -7,7 +7,7 @@
 set row limit 1
 format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
-"[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
+"[[Coordinates]]\nRA: %COO(d;A)\nDEC: %COO(d;D)\n" +
 "[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
 "[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
 "[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
@@ -24,7 +24,7 @@ query id {0}</Value>
     <Setting Name="RegionQuery" Type="System.String" Scope="User">
       <Value Profile="(Default)">format object f1 "[[Main_id]]\n%IDLIST(1)\n" +
 "[[ObjectType]]\n%OTYPE(V)\n" +
-"[[Coordinates]]\nRA: %COO(A)\nDEC: %COO(D)\n" +
+"[[Coordinates]]\nRA: %COO(d;A)\nDEC: %COO(d;D)\n" +
 "[[Identifiers]]\n%IDLIST[%-20*\n]\n"+
 "[[OtherTypes]]\n%OTYPELIST(V\n)\n"+
 "[[ProperMotion]]\nRA: %PM(A)\nDEC: %PM(D)\n" +
@@ -34,8 +34,7 @@ query id {0}</Value>
 "[[Fluxes]]\n%FLUXLIST()[%*(N=F)\n]\n" +
 "[[end]]"
 
-set radius {0}d
-query coo {1}</Value>
+query sample ra &gt; {RALowerLimit} &amp; ra &lt; {RAUpperLimit} &amp; dec &lt; {DECUpperLimit} &amp; dec &gt; {DECLowerLimit} &amp; maintype != 'star'</Value>
     </Setting>
   </Settings>
 </SettingsFile>
