Some more work on advanced plate solving and bugfixing of image cropping (untested)

--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -49,6 +49,7 @@
     <add key="ChatPrefix" value="astrobot" />
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
+    <add key="AstropyWCSConverterPath" value=""/>
   </appSettings>
 
   <applicationSettings>
