--- a/Astrobot/DiscordAstroBot.csproj
+++ b/Astrobot/DiscordAstroBot.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Commands\Simbad.cs" />
     <Compile Include="Commands\SmallTalkCommand.cs" />
     <Compile Include="Commands\TestCommand.cs" />
+    <Compile Include="Commands\UserCommands.cs" />
     <Compile Include="Commands\Version.cs" />
     <Compile Include="Commands\Weather.cs" />
     <Compile Include="DiscordAstroBot.cs" />
@@ -215,6 +216,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>SIMBADSettings.settings</DependentUpon>
     </Compile>
+    <Compile Include="TimerJobs\IntermediateLaunchNotify.cs" />
     <Compile Include="TimerJobs\LaunchNews.cs" />
     <Compile Include="TimerJobs\TimerJobBase.cs" />
     <Compile Include="Utilities\AdvancedPlateSolver.cs" />
