--- a/UnitTests/App.config
+++ b/UnitTests/App.config
@@ -7,7 +7,7 @@
 
   <appSettings>
     <add key="AstrometryTokenFilePath" value="\\10.0.0.2\Documents\Tino\AstrometryToken.txt" />
-    <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken_dev.txt" />
+    <add key="TokenFilePath" value="\\10.0.0.2\Documents\Tino\AstroDiscordBotToken.txt" />
     <add key="ChatPrefix" value="astrobot" />
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
