Started working on the social media publishing feature. Can now store relevant information on a per server / per user basis in xml files

--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -49,7 +49,7 @@
     <add key="ChatPrefix" value="astrobot" />
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
-    <add key="AstropyWCSConverterPath" value="C:\AstropyWCSConverter"/>
+    <add key="AstropyWCSConverterPath" value="C:\Users\hti\Source\Repos\AstropyWCSConverter\AstropyWCSConverter\" />
   </appSettings>
 
   <applicationSettings>
