--- a/UnitTests/App.config
+++ b/UnitTests/App.config
@@ -11,7 +11,7 @@
     <add key="ChatPrefix" value="astrobot" />
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
-    <add key="AstropyWCSConverterPath" value="C:\AstropyWCSConverter"/>
+    <add key="AstropyWCSConverterPath" value="C:\Users\hti\Source\Repos\AstropyWCSConverter\AstropyWCSConverter" />
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
   <runtime>
