--- a/Astrobot/packages.config
+++ b/Astrobot/packages.config
@@ -7,6 +7,7 @@
   <package id="Discord.Net.Rpc" version="1.0.2" targetFramework="net46" />
   <package id="Discord.Net.Webhook" version="1.0.2" targetFramework="net46" />
   <package id="Discord.Net.WebSocket" version="1.0.2" targetFramework="net46" />
+  <package id="InstaSharp" version="2.0.6" targetFramework="net46" />
   <package id="InstaSharper" version="1.3.8" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
@@ -20,6 +21,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net452" />
   <package id="PhantomJS" version="2.1.1" targetFramework="net452" />
+  <package id="Portable.BouncyCastle" version="1.8.1.1" targetFramework="net46" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
   <package id="Selenium.Support" version="3.4.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net452" />
