Started work on the social media publishing

--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -50,6 +50,7 @@
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
     <add key="AstropyWCSConverterPath" value="C:\AstropyWCSConverter\" />
+    <add key="InstagramAPIKeyPath" value="C:\Users\hti\Desktop\insta.txt"/>
   </appSettings>
 
   <applicationSettings>
