Some more bugfixes

--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -51,7 +51,7 @@
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
     <add key="AstropyWCSConverterPath" value="C:\AstropyWCSConverter\" />
-    <add key="InstagramAPIKeyPath" value="C:\Users\hti\Desktop\astroinstatesting.txt"/>
+    <add key="InstagramAPIKeyPath" value="\\192.168.1.12\Documents\Tino\astroinstatesting.txt"/>
   </appSettings>
 
   <applicationSettings>
