More work on social media publishing

--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -51,7 +51,8 @@
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
     <add key="AstropyWCSConverterPath" value="C:\AstropyWCSConverter\" />
-    <add key="InstagramAPIKeyPath" value="\\192.168.1.12\Documents\Tino\astroinstatesting.txt"/>
+    <add key="InstagramAPIKeyPath" value="\\10.0.0.2\Documents\Tino\astroinstatesting.txt"/>
+    <add key="FacebookAccessTokenPath" value="\\10.0.0.2\Documents\Tino\DiscordAstroBot_Facebook_token_testing.txt"/>
   </appSettings>
 
   <applicationSettings>
