Switched to a different instagram library

--- a/Astrobot/App.config
+++ b/Astrobot/App.config
@@ -51,8 +51,8 @@
     <add key="WhiteListEnabled" value="false" />
     <add key="OwnerName" value="Cobra#8151" />
     <add key="AstropyWCSConverterPath" value="C:\AstropyWCSConverter\" />
-    <add key="InstagramAPIKeyPath" value="\\10.0.0.2\Documents\Tino\astroinstatesting.txt"/>
-    <add key="FacebookAccessTokenPath" value="\\10.0.0.2\Documents\Tino\DiscordAstroBot_Facebook_token_testing.txt"/>
+    <add key="InstagramAPIKeyPath" value="\\10.0.0.2\Documents\Tino\astroinstatesting.txt" />
+    <add key="FacebookAccessTokenPath" value="\\10.0.0.2\Documents\Tino\DiscordAstroBot_Facebook_token_testing.txt" />
   </appSettings>
 
   <applicationSettings>
@@ -143,6 +143,10 @@ query sample ra &gt; {RALowerLimit} &amp; ra &lt; {RAUpperLimit} &amp; dec &lt; 
       <dependentAssembly>
         <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.2.0" newVersion="1.2.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
